# tp_datawarehousing

./: .gitignore  CLAUDE.md  README.md  check_quality_metrics.py  dash_dqm.pbix  dash_prods.pbix  dash_productos.pbix  main.py  optimize_database.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.cursor/rules/: python_expert_guide.mdc
.data/: tp_dwa.db
.docs/: step_03_analysis.md  step_04_analysis.md  step_05_analysis.md  step_09_analysis.md  tp.md
csvs - dashboards/: DP1_Ventas_Mensuales_Categoria_Pais.csv  DP2_Performance_Empleados_Trimestral.csv  DP3_Analisis_Logistica_Shippers.csv  DQM_descriptivos_entidad.csv  DQM_ejecucion_procesos.csv  DQM_indicadores_calidad.csv  DQM_indicadores_calidad__.csv  DWA_DIM_Clientes.csv  DWA_DIM_Empleados.csv  DWA_DIM_Geografia.csv  DWA_DIM_Productos.csv  DWA_DIM_Shippers.csv  DWA_DIM_Tiempo.csv  DWA_FACT_Ventas.csv
db/: tp_dwa.db
docs/: step_01_analysis.md  step_02_analysis.md  step_06_analysis.md  step_07_analysis.md  step_08_analysis.md  step_10_analysis.md  tp.md
informe/: Introducción a Data Warehousing - Presentación.pptx  informe_tp_datawarehousing.md
informe - presentación/: Introducción a Data Warehousing - Presentación.pptx
src/tp_datawarehousing/: data_remediation_utils.py  main.py  quality_utils.py
src/tp_datawarehousing/steps/: step_01_setup_staging_area.py  step_02_load_staging_data.py  step_03_add_foreign_keys.py  step_03_create_ingestion_layer.py  step_04_link_world_data.py  step_05_create_dwh_model.py  step_06_create_dqm.py  step_07_initial_dwh_load.py  step_08_load_ingesta2_to_staging.py  (+8 more)
(+3 files in other folders)
