[project]
name = "tp-datawarehousing"
version = "0.1.0"
description = "Proyecto de Data Warehousing - TP Final"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
tp-datawarehousing = "tp_datawarehousing.main:main"
